--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "tailwind-merge": "^2.1.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "twilio": "^4.20.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
